# vk-deferred

./: .gitignore  CMakeLists.txt  README.md
shaders/: compile.bat  forwardFrag.spv  forwardVert.spv  frag.spv  fragMulti.spv  light.vert  multi.frag  multi.vert  object.frag  object.vert  objectShader.vert  point_light.frag  point_light.vert  point_light2.frag  point_light2.vert  point_light_frag.spv  point_light_frag2.spv  point_light_vert.spv  point_light_vert2.spv  shader.frag  shader.vert  shaderLight.vert  vert.spv  vertLight.spv
shaders/forwardRenderer/: oldshader.frag  oldshader.vert
src/: main.cpp  vk_camera.cpp  vk_camera.h  vk_descriptors.cpp  vk_descriptors.h  vk_engine.cpp  vk_engine.h  vk_images.cpp  vk_images.h  vk_initializers.cpp  vk_initializers.h  vk_pipeline.cpp  vk_pipelines.h  vk_types.h
